--- a/package.json
+++ b/package.json
@@ -6,9 +6,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.13",
+    "@uiball/loaders": "^1.2.6",
+    "@vercel/analytics": "^0.1.11",
+    "framer-motion": "^10.0.1",
     "next": "latest",
+    "next-seo": "^5.15.0",
+    "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.4",
+    "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.8.0",
+    "react-use": "^17.4.0"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
